Bug 479553 - "Shared Memory Usage" and "Private Memory Usage" explanatory text in "Configure Columns" dialog doesn't elide
Summary: "Shared Memory Usage" and "Private Memory Usage" explanatory text in "Configu...
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.91.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-08 21:52 UTC by iodreamify
Modified: 2024-02-02 14:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (113.06 KB, image/png)
2024-01-08 21:52 UTC, iodreamify
Details

Note You need to log in before you can comment on or make changes to this bug.
Description iodreamify 2024-01-08 21:52:39 UTC
Created attachment 164762 [details]
screenshot

SUMMARY
Some lines in edit columns mode go off screen.   

STEPS TO REPRODUCE
1. Go to applications view
2. right click on column and select "configure columns"
3. scroll down to long text

OBSERVED RESULT
text goes off window

EXPECTED RESULT
text is elided or wrapped

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.2.0-39-generic (64-bit)
Graphics Platform: Wayland
Graphics Processor: Mesa Intel® HD Graphics 3000
Comment 1 Nate Graham 2024-01-11 22:36:28 UTC
Can reproduce only for "Shared Memory Usage" and "Private Memory Usage", which both have two lines of explanation, not one or zero. All other ones elide properly for me.
Comment 2 Bug Janitor Service 2024-02-02 12:36:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/317
Comment 3 Arjen Hiemstra 2024-02-02 14:05:58 UTC
Git commit 33cc1ccfab5bded0e508ba1f055e3e504ceaf94f by Arjen Hiemstra.
Committed on 02/02/2024 at 12:20.
Pushed by ahiemstra into branch 'master'.

processcore: Remove hard breaks from memory attribute descriptions

These cause the text to be processed as HTML and break elision. So
remove them as the presentation should be up to whatever is displaying
these strings anyway.

M  +2    -2    processcore/extended_process_list.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/33cc1ccfab5bded0e508ba1f055e3e504ceaf94f