processcore: Remove hard breaks from memory attribute descriptions

These cause the text to be processed as HTML and break elision. So
remove them as the presentation should be up to whatever is displaying
these strings anyway.

BUG: 479553